fixes and cleanup - fix https://github.com/F5Networks/f5-openstack-hot/issues/9 - update readmes - update output names - this makes bigip_license_key_param optional - add license type to metrics

--- a/experimental/configs/onboarding_autoscale_config.yaml
+++ b/experimental/configs/onboarding_autoscale_config.yaml
@@ -1,6 +1,6 @@
 heat_template_version: 2016-04-08
 
-description: This template configures autoscale components for a standard f5 VE instance in an active/standby config sync group. 
+description: This template configures autoscale components for a standard f5 VE instance in a config-sync cluster.
 
 parameters:
   mgmt_ip:
